feat: backport to 1.16.5