@@ -1,13 +1,16 @@
 package dev.ftb.mods.promoter.api;
 
 import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import dev.ftb.mods.promoter.api.requirements.Requirement;
+import net.minecraft.client.Minecraft;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.util.*;
 
 public class InfoFetcher {
@@ -17,6 +20,7 @@ public class InfoFetcher {
     private static final String API_URL = "https://api.feed-the-beast.com/v1/meta/promotions";
 
     private final List<PromoData> promotions = Collections.synchronizedList(new ArrayList<>());
+    private boolean isFirstGet = true;
 
     private InfoFetcher() {
     }
@@ -26,33 +30,75 @@ public class InfoFetcher {
     }
 
     public void load() {
-        var client = HttpClient.newHttpClient();
-        var request = HttpRequest.newBuilder()
-                .uri(URI.create(API_URL))
-                .GET()
-                .build();
+        Minecraft.getInstance().submit(() -> {
+            try {
+                URL url = new URL(API_URL);
+                HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+                connection.setRequestMethod("GET");
+                connection.setRequestProperty("User-Agent", "Mozilla/5.0");
 
-        // Send of the request asynchronously (don't block the main thread)
-        client.sendAsync(request, HttpResponse.BodyHandlers.ofString())
-                .thenApply(HttpResponse::body)
-                .thenAccept(data -> {
-                    // Do something with our data
-                    try {
-                        var gson = new Gson();
-                        var response = gson.fromJson(data, PromoResponse.class);
+                int responseCode = connection.getResponseCode();
+                if (responseCode == HttpURLConnection.HTTP_OK) {
+                    try (BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
+                        StringBuilder response = new StringBuilder();
+                        String inputLine;
 
-                        promotions.addAll(response.promotions());
-                    } catch (Exception e) {
-                        LOGGER.error("Failed to parse response", e);
+                        while ((inputLine = in.readLine()) != null) {
+                            response.append(inputLine);
+                        }
+
+                        GsonBuilder builder = new GsonBuilder();
+                        // Add a custom deserializer for the requirements
+                        builder.registerTypeAdapter(Requirement.class, new Requirement.RequirementDeserializer());
+                        Gson gson = builder.create();
+
+                        PromoResponse responseObj = gson.fromJson(response.toString(), PromoResponse.class);
+
+                        promotions.addAll(responseObj.promotions());
                     }
-                })
-                .exceptionally(e -> {
-                    LOGGER.error("Failed to fetch promotions", e);
-                    return null;
-                });
+                } else {
+                    LOGGER.error("Failed to fetch promotions, response code: {}", responseCode);
+                }
+            } catch (Exception e) {
+                LOGGER.error("Failed to fetch promotions", e);
+            }
+        });
     }
 
     public List<PromoData> getPromotions() {
+        if (isFirstGet) {
+            isFirstGet = false;
+            refineList();
+        }
+
         return promotions;
+    }
+
+    public void refineList() {
+        // We want to go over the list and remove and promotions that are not valid for this instance.
+        if (this.promotions.isEmpty()) {
+            return;
+        }
+
+        List<PromoData> cloneData = new ArrayList<>(this.promotions);
+        for (PromoData data : cloneData) {
+            List<Requirement> requirements = data.requirements();
+
+            if (requirements == null || data.requirements().isEmpty()) {
+                continue;
+            }
+
+            boolean passes = true;
+            for (Requirement requirement : requirements) {
+                if (!requirement.test(data)) {
+                    passes = false;
+                    break;
+                }
+            }
+
+            if (!passes) {
+                this.promotions.remove(data);
+            }
+        }
     }
 }
